# DoppleX

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  pack.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements-tiktok.txt  requirements-x.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: cc758a0e3df0_initial_migration_with_all_models.py
src/: README_PARTS.md  __init__.py  cli.py  main.py  models.py  patch_placeholder.txt
src/analytics/: metrics.py
src/brain/: brain.py  generator.py  ollama_bridge.py  style_learner.py
src/config/: settings.py
src/db/: __init__.py  database.py
src/embeddings/: vector_store.py
src/encryption/: crypto.py
src/image_gen/: sd_client.py
src/oauth/: oauth_config.py  oauth_flow.py  oauth_manager.py
src/pipeline/: __init__.py  pipeline.py
src/prompts/: prompt_builder.py
src/scheduler/: scheduler.py
src/security/: __init__.py  token_store.py
src/tiktok/: tiktok_client.py
src/ui/: __init__.py  cyber_theme.py  dev_console.py  dialogs.py  matrix_banner.py  tray_manager.py
src/utils/: audit.py  diagnostics.py  error_handler.py  log_export.py  logger.py  time_utils.py  updater.py  validators.py
src/x_api/: x_client.py
tests/: conftest.py  test_content_generator.py  test_diagnostics.py  test_edge_cases_and_errors.py  test_end_to_end.py  test_error_handler.py  test_oauth_flow.py  test_packaging.py  test_pipeline.py  test_tiktok_end2end.py  test_tiktok_live_dryrun.py
