[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "you2socialbrain"
version = "1.0.0"
description = "AI-powered personal content brain for social media management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Seraphonix Studios"}
]
keywords = ["ai", "social-media", "ollama", "automation", "twitter", "tiktok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Communications",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
gui = [
    "flet>=0.21.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
tiktok = ["playwright>=1.40.0"]
x = ["requests-oauthlib>=1.3.1"]
all = [
    "flet>=0.21.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
    "requests-oauthlib>=1.3.1",
    "keyring>=25.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
you2 = "cli:cli"
you2-gui = "main:main"

[project.urls]
Homepage = "https://github.com/seraphonixstudios/DoppleX"
Repository = "https://github.com/seraphonixstudios/DoppleX"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.key", "*.json"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
